--- a/app/styles/edit.module.css
+++ b/app/styles/edit.module.css
@@ -131,7 +131,7 @@
 
 /* Style for the select box */
 .formselect {
-    width: 20%;
+    width: calc(32% - 20px);
     padding: 8px 10px;
     margin: 8px 0;
     box-sizing: border-box;
@@ -158,3 +158,75 @@
 .formselect {
     font-family: 'Sarabun', sans-serif;
 }
+
+
+@media (max-width: 600px) {
+    .Table1 {
+        
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        color: rgb(0, 0, 0);
+        border: 1px solid #ffffff;
+        margin: 0 auto;
+
+    }
+
+    .inputField {
+        margin: 10px auto;
+        width: calc(90% - 20px);
+        border: 1px solid #ffffff;
+        border: none;
+        border: 2px solid rgba(93, 93, 93, 0.808);
+        border-radius: 4px;
+        margin-left: 5px;
+        margin-left: 22px;
+    }
+
+
+    .formselect {
+        width: 90%;
+        padding: 8px 10px;
+        margin: 8px 0;
+        box-sizing: border-box;
+        border: 2px solid rgba(93, 93, 93, 0.808);
+        margin-left: 2px;
+    }
+
+
+}
+
+
+@media (min-width: 601px) and (max-width: 1024px) {
+    .Table1 {
+        display: block;
+        flex-direction: column;
+        width: 100%;
+        color: rgb(0, 0, 0);
+        border: 1px solid #ffffff;
+        margin: 0 auto;
+
+    }
+
+    .inputField {
+        margin: 10px auto;
+        width: calc(70% - 20px);
+        border: 1px solid #ffffff;
+        border: none;
+        border: 2px solid rgba(93, 93, 93, 0.808);
+        border-radius: 4px;
+        margin-left: 22px;
+    }
+
+
+    .formselect {
+        width: 70%;
+        padding: 8px 10px;
+        margin: 8px 0;
+        box-sizing: border-box;
+        border: 2px solid rgba(93, 93, 93, 0.808);
+        border-radius: 4px;
+        margin-left: 55px;
+    }
+}
+
