--- a/app/styles/loginlayout.module.css
+++ b/app/styles/loginlayout.module.css
@@ -39,3 +39,30 @@
     padding-bottom: 40px;
 
 }
+
+@media (max-width: 767px) {
+.box {
+        width: 90%;
+
+    }
+
+    .text {
+        padding-top: 0px;
+        padding-bottom: 20px;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+    .box {
+        width: 90%;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+
+    .text {
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+}
+
+
+
