--- a/app/styles/count.module.css
+++ b/app/styles/count.module.css
@@ -4,7 +4,7 @@
     padding: 10px 0px 10px 0px;
     /* บน ขวา ล่าง ซ้าย*/
     margin: auto;
-    width: 80%;
+    width: 100%;
     height: auto;
 
     align-items: center;
@@ -17,35 +17,92 @@
 
 .BodyContainer>label {
     font-family: 'Sarabun', sans-serif;
-    font-size: 35px;
+    font-size: 40px;
     margin: 10px;
-
 }
 
-.ContainerContent>input {
-    width: 40%;
-    /* Increase the width */
+.containerSum {
+    display: flex;
+    width: 100%;
+    height: auto;
+    margin-top: 30px;
+    margin-bottom: 15px;
+}
+
+.flex27 {
+    flex: 0 0 27%;
+
+    margin-top: 50px;
+}
+
+.innerBox {
+    flex: 1;
+    margin: 10px;
+    padding: 10px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.innerBox h3 {
+    font-family: 'Sarabun', sans-serif;
+    font-size: 19px;
+    font-weight: 400;
+    margin-bottom: 10px;
+    margin-top: 0;
+}
+
+.numInnerBox {
+    background-color: #ccc;
+    height: 52px;
+    width: 80%;
+    border-radius: 10px;
+    font-size: 35px;
+    font-family: 'Sarabun', sans-serif;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flex73 {
+    flex: 0 0 73%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+}
+
+.flex73 h2 {
+    font-family: 'Sarabun', sans-serif;
+    font-size: 23px;
+    font-weight: 100;
+}
+
+.flex73 input {
+    width: 70%;
     height: 120px;
-    /* Increase the height */
     padding: 12px;
-    /* Increase the padding */
     border: 1px solid #ccc;
     border-radius: 10px;
     margin: 5px;
     font-family: 'Sarabun', sans-serif;
     font-size: 70px;
-    /* Increase the font size */
     background-color: #ccc;
     text-align: center;
 }
 
-.ContainerContent>h2 {
-    font-family: 'Sarabun', sans-serif;
-    font-size: 20px;
-    font-weight: 500;
-    margin-bottom: 5px;
+.innerBoxFlex73 {
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
 }
-
 
 .styleButton {
     display: flex;
@@ -78,16 +135,34 @@
     color: white;
 }
 
-@media (max-width: 600px) {
-    .BodyContainer {
+
+@media (max-width: 767px) and (orientation: portrait) {
+    .containerSum {
+        flex-direction: column;
+    }
+
+    .flex27 {
+        margin-top: 0px;
+    }
+
+    .flex73 {
+        align-items: center;
+    }
+
+    .innerBoxFlex73 {
         width: 90%;
     }
+}
 
-    .BodyContainer>label {
-        font-size: 25px;
+@media (max-width: 479px) and (orientation: portrait) {
+    .innerBoxFlex73 {
+        width: 100%;
     }
+}
 
-    .ContainerContent>input {
-        width: 80%;
+@media (max-width: 667px) and (orientation: landscape) {
+    .btnClick button.btnPlus {
+        background-color: rgb(0, 0, 0);
+        color: white;
     }
 }
