--- a/app/styles/navbar.module.css
+++ b/app/styles/navbar.module.css
@@ -42,6 +42,7 @@
     font-weight: bold;
     color: #333;
   }
+
   .button{
     font-weight: bold;
   }
@@ -98,12 +99,8 @@
       font-weight:bold;
     }
     .username {
-      font-family: 'Noto Sans Thai', sans-serif;
-      font-size: 16px;
-      font-weight: bold;
-      color: #ffffffcb;
+      display: none;
       
-
     }
     .button{
       font-weight: bold;
