--- a/app/styles/footer.module.css
+++ b/app/styles/footer.module.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #000
+    color: #000;
     
 }
 @media screen and (max-width: 800px) {
